# distributed-training-demo

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json
01-single-gpu/: train-llm.py
02-ddp/: train-llm.py
03-fsdp/: train-llm.py
