[project]
name = "distributed-training-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "comet-ml>=3.54.0",
    "datasets>=4.3.0",
    "torch>=2.9.0",
    "tqdm>=4.67.1",
    "transformers>=4.57.1",
    "flash-attn"
]


[tool.uv.extra-build-dependencies]
flash-attn = [{ requirement = "torch", match-runtime = true }]

[tool.uv.extra-build-variables]
flash-attn = { TORCH_CUDA_ARCH_LIST = "8.0", "FLASH_ATTN_CUDA_ARCHS" = "80" }